--- a/app/src/main/res/layout/fragment_playlist.xml
+++ b/app/src/main/res/layout/fragment_playlist.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fragment_playlist"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".PlaylistFragment">
@@ -30,8 +31,7 @@
             android:id="@+id/playlistsMenus"
             android:layout_width="match_parent"
             android:layout_height="530dp"
-            android:layout_marginTop="100dp">
-        </ListView>
+            android:layout_marginTop="100dp" />
 
     </FrameLayout>
 
