--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,9 +5,10 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
+    <color name="black">#2D2D2D</color>
     <color name="white">#FFFFFFFF</color>
     <color name="purple_app">#9A7ADF</color>
     <color name="white_search">#454545</color>
-    <color name="gray">#DCDCDC</color>
+    <color name="gray">#54DCDCDC</color>
+    <color name="navigation">#9A7ADF</color>
 </resources>
